differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr64766.c-4.8.2-1.out.txt
pr64766.c:9:1: error: function ‘foo’ is initialized like a variable
 void foo () = 0;  
 ^
pr64766.c:9:1: error: invalid initializer
